[package]
name = "zcif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.4"
#
#[[bench]]
#name = "histogram"
#harness = false
#

[[bench]]
name = "huffman_bench"
harness = false

#
#[[bench]]
#name = "sort"
#harness = false

