[package]
name = "zune-entropy"
version = "0.2.0"
edition = "2021"

[features]
arm=[]
default=["arm"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4.14"

[dev-dependencies]
criterion = "0.3.0"
rand = "0.8.4"
#
#[[bench]]
#name = "histogram"
#harness = false
#

#
#[[bench]]
#name = "huffman_bench"
#harness = false

#
#[[bench]]
#name = "sort"
#harness = false

